--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>Olá, Mundo!</h1>
+    <main>
+        <!--Celular no meio da tela-->
+        <section id="telefone">
+        
+        </section>
+
+        <!--Links das redes no lado direito-->
+        <section id="redes-sociais">
+
+        </section>
+    </main>
 </body>
 </html>
