Criar tela home

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <!--Celular no meio da tela-->
         <section id="telefone">
-        
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
 
         <!--Links das redes no lado direito-->
