--- a/youtube.html
+++ b/youtube.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="YoutTube">
-    <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo/playlists" target="_blank"> ACESSE</a>
+    <img src="imagens/tela-youtube.jpg" alt="YoutTube">
+    <a href="https://www.youtube.com/channel/UCdyXeATZQyUNfOZC46ltJ8Q" target="_blank"> ACESSE</a>
 </body>
 </html>
